#CTBSV, CTPSV might have bugs or intrinsically inaccurate
#Rnrm2 should be checked more
check_PROGRAMS = $(mpblas__Float64x.h_test_PROGRAMS) 
TESTS = $(check_PROGRAMS)
mpblas__Float64x.h_test_PROGRAMS = \
arithmetic.debug_longdouble \
complex.debug_longdouble \
iCamax.debug.longdouble_ref iCamax.debug.longdouble   \
iRamax.debug.longdouble_ref iRamax.debug.longdouble   \
Mlsame.debug.longdouble_ref Mlsame.debug.longdouble   \
Mxerbla.debug.longdouble_ref Mxerbla.debug.longdouble \
CRrot.debug.longdouble_ref  CRrot.debug.longdouble    \
CRscal.debug.longdouble_ref CRscal.debug.longdouble   \
Caxpy.debug.longdouble_ref  Caxpy.debug.longdouble    \
Ccopy.debug.longdouble_ref  Ccopy.debug.longdouble    \
Cdotc.debug.longdouble_ref  Cdotc.debug.longdouble	\
Cdotu.debug.longdouble_ref  Cdotu.debug.longdouble	\
Cgbmv.debug.longdouble_ref  Cgbmv.debug.longdouble	\
Cgemm.debug.longdouble_ref  Cgemm.debug.longdouble	\
Cgemv.debug.longdouble_ref  Cgemv.debug.longdouble	\
Cgerc.debug.longdouble_ref  Cgerc.debug.longdouble	\
Cgeru.debug.longdouble_ref  Cgeru.debug.longdouble    \
Chbmv.debug.longdouble_ref  Chbmv.debug.longdouble	\
Chemm.debug.longdouble_ref  Chemm.debug.longdouble	\
Chemv.debug.longdouble_ref  Chemv.debug.longdouble	\
Cher.debug.longdouble_ref   Cher.debug.longdouble 	\
Cher2.debug.longdouble_ref  Cher2.debug.longdouble	\
Cher2k.debug.longdouble_ref Cher2k.debug.longdouble	\
Cherk.debug.longdouble_ref  Cherk.debug.longdouble	\
Chpmv.debug.longdouble_ref  Chpmv.debug.longdouble	\
Chpr.debug.longdouble_ref   Chpr.debug.longdouble	\
Chpr2.debug.longdouble_ref  Chpr2.debug.longdouble	\
Crotg.debug.longdouble_ref  Crotg.debug.longdouble	\
Cscal.debug.longdouble_ref  Cscal.debug.longdouble	\
Cswap.debug.longdouble_ref  Cswap.debug.longdouble	\
Csymm.debug.longdouble_ref  Csymm.debug.longdouble    \
Csyr2k.debug.longdouble_ref Csyr2k.debug.longdouble	\
Csyrk.debug.longdouble_ref  Csyrk.debug.longdouble	\
Ctbmv.debug.longdouble_ref  Ctbmv.debug.longdouble	\
Ctbsv.debug.longdouble_ref  Ctbsv.debug.longdouble	\
Ctpmv.debug.longdouble_ref  Ctpmv.debug.longdouble	\
Ctpsv.debug.longdouble_ref  Ctpsv.debug.longdouble	\
Ctrmm.debug.longdouble_ref  Ctrmm.debug.longdouble	\
Ctrmv.debug.longdouble_ref  Ctrmv.debug.longdouble	\
Ctrsm.debug.longdouble_ref  Ctrsm.debug.longdouble	\
Ctrsv.debug.longdouble_ref  Ctrsv.debug.longdouble	\
RCabs1.debug.longdouble_ref RCabs1.debug.longdouble	\
RCasum.debug.longdouble_ref RCasum.debug.longdouble	\
RCnrm2.debug.longdouble_ref RCnrm2.debug.longdouble	\
Rasum.debug.longdouble_ref  Rasum.debug.longdouble    \
Raxpy.debug.longdouble_ref  Raxpy.debug.longdouble	\
Rcopy.debug.longdouble_ref  Rcopy.debug.longdouble	\
Rdot.debug.longdouble_ref   Rdot.debug.longdouble	\
Rgbmv.debug.longdouble_ref  Rgbmv.debug.longdouble	\
Rgemm.debug.longdouble_ref  Rgemm.debug.longdouble	\
Rgemv.debug.longdouble_ref  Rgemv.debug.longdouble	\
Rger.debug.longdouble_ref   Rger.debug.longdouble	\
Rnrm2.debug.longdouble_ref  Rnrm2.debug.longdouble	\
Rrot.debug.longdouble_ref   Rrot.debug.longdouble	\
Rrotg.debug.longdouble_ref  Rrotg.debug.longdouble	\
Rrotm.debug.longdouble_ref  Rrotm.debug.longdouble	\
Rsbmv.debug.longdouble_ref  Rsbmv.debug.longdouble	\
Rscal.debug.longdouble_ref  Rscal.debug.longdouble	\
Rspmv.debug.longdouble_ref  Rspmv.debug.longdouble    \
Rspr.debug.longdouble_ref   Rspr.debug.longdouble	\
Rspr2.debug.longdouble_ref  Rspr2.debug.longdouble	\
Rswap.debug.longdouble_ref  Rswap.debug.longdouble	\
Rsymm.debug.longdouble_ref  Rsymm.debug.longdouble	\
Rsymv.debug.longdouble_ref  Rsymv.debug.longdouble	\
Rsyr.debug.longdouble_ref   Rsyr.debug.longdouble	\
Rsyr2.debug.longdouble_ref  Rsyr2.debug.longdouble	\
Rsyr2k.debug.longdouble_ref Rsyr2k.debug.longdouble	\
Rsyrk.debug.longdouble_ref  Rsyrk.debug.longdouble	\
Rtbmv.debug.longdouble_ref  Rtbmv.debug.longdouble	\
Rtbsv.debug.longdouble_ref  Rtbsv.debug.longdouble	\
Rtpmv.debug.longdouble_ref  Rtpmv.debug.longdouble	\
Rtpsv.debug.longdouble_ref  Rtpsv.debug.longdouble	\
Rtrmm.debug.longdouble_ref  Rtrmm.debug.longdouble    \
Rtrmv.debug.longdouble_ref  Rtrmv.debug.longdouble	\
Rtrsm.debug.longdouble_ref  Rtrsm.debug.longdouble	\
Rtrsv.debug.longdouble_ref  Rtrsv.debug.longdouble

mpblas__Float64x.h_testdir = $(prefix)/share/mplapack/testing/longdouble
ref_libdepends = -L$(top_builddir)/mpblas/reference -lmpblas__Float64x.h_ref -lmpblas_mpfr_ref
opt_libdepends = -L$(top_builddir)/mpblas/optimized/longdouble -lmpblas__Float64x.h -L$(top_builddir)/mpblas/reference -lmpblas_mpfr_ref
mplibs=-L$(MPC_LIBDIR) -L$(MPFR_LIBDIR) -L$(GMP_LIBDIR) -lmpfr -lmpc -lgmp -lquadmath
refblas=-L$(top_builddir)/external/i/LAPACK/lib -lblas $(FCLIBS)

debug_cxxflags = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(GMP_INCLUDEDIR) -I$(MPFR_INCLUDEDIR) -I$(MPC_INCLUDEDIR) -I$(top_srcdir)/mpfrc++ -D___MPLAPACK_BUILD_WITH__FLOAT64X___

if !IS_MACOSX
debug_srcdepends = ../common/xerbla.cpp ../common/mplapack.debug.cpp ../common/Mxerbla.override.cpp
endif

if IS_MACOSX
lib_LTLIBRARIES = libmxerbla_override.la
libmxerbla_override_la_CPPFLAGS = -I$(top_srcdir)/include -D___MPLAPACK_BUILD_WITH__FLOAT64X___
libmxerbla_override_la_SOURCES =  ../common/Mxerbla.override.cpp
libmxerbla_override_la_LDFLAGS= -Wl,-flat_namespace,-undefined,dynamic_lookup
debug_srcdepends = ../common/xerbla.cpp ../common/mplapack.debug.cpp
mplibs+=-Wl,-flat_namespace,-undefined,dynamic_lookup
TESTS_ENVIRONMENT=DYLD_INSERT_LIBRARIES=.libs/libmxerbla_override.0.dylib
endif

##
arithmetic_debug_longdouble_SOURCES=../common/arithmetic.debug.cpp $(debug_srcdepends)
arithmetic_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
arithmetic_debug_longdouble_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

complex_debug_longdouble_SOURCES=../common/complex.debug.cpp $(debug_srcdepends)
complex_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
complex_debug_longdouble_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

iCamax_debug_longdouble_ref_SOURCES=../common/iCamax.debug.cpp $(debug_srcdepends)
iCamax_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
iCamax_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

iCamax_debug_longdouble_SOURCES=../common/iCamax.debug.cpp $(debug_srcdepends)
iCamax_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
iCamax_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

iRamax_debug_longdouble_ref_SOURCES=../common/iRamax.debug.cpp $(debug_srcdepends)
iRamax_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
iRamax_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

iRamax_debug_longdouble_SOURCES=../common/iRamax.debug.cpp $(debug_srcdepends)
iRamax_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
iRamax_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Mlsame_debug_longdouble_ref_SOURCES=../common/Mlsame.debug.cpp $(debug_srcdepends)
Mlsame_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Mlsame_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Mlsame_debug_longdouble_SOURCES=../common/Mlsame.debug.cpp $(debug_srcdepends)
Mlsame_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Mlsame_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Mxerbla_debug_longdouble_ref_SOURCES=../common/Mxerbla.debug.cpp $(debug_srcdepends)
Mxerbla_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Mxerbla_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Mxerbla_debug_longdouble_SOURCES=../common/Mxerbla.debug.cpp $(debug_srcdepends)
Mxerbla_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Mxerbla_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

CRrot_debug_longdouble_ref_SOURCES=../common/CRrot.debug.cpp $(debug_srcdepends)
CRrot_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
CRrot_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

CRrot_debug_longdouble_SOURCES=../common/CRrot.debug.cpp $(debug_srcdepends)
CRrot_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
CRrot_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

CRscal_debug_longdouble_ref_SOURCES=../common/CRscal.debug.cpp $(debug_srcdepends)
CRscal_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
CRscal_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

CRscal_debug_longdouble_SOURCES=../common/CRscal.debug.cpp $(debug_srcdepends)
CRscal_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
CRscal_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Caxpy_debug_longdouble_SOURCES=../common/Caxpy.debug.cpp $(debug_srcdepends)
Caxpy_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Caxpy_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Caxpy_debug_longdouble_ref_SOURCES=../common/Caxpy.debug.cpp $(debug_srcdepends)
Caxpy_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Caxpy_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Ccopy_debug_longdouble_SOURCES=../common/Ccopy.debug.cpp $(debug_srcdepends)
Ccopy_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Ccopy_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Ccopy_debug_longdouble_ref_SOURCES=../common/Ccopy.debug.cpp $(debug_srcdepends)
Ccopy_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Ccopy_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cdotc_debug_longdouble_SOURCES=../common/Cdotc.debug.cpp $(debug_srcdepends)
Cdotc_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cdotc_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cdotc_debug_longdouble_ref_SOURCES=../common/Cdotc.debug.cpp $(debug_srcdepends)
Cdotc_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cdotc_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cdotu_debug_longdouble_SOURCES=../common/Cdotu.debug.cpp $(debug_srcdepends)
Cdotu_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cdotu_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cdotu_debug_longdouble_ref_SOURCES=../common/Cdotu.debug.cpp $(debug_srcdepends)
Cdotu_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cdotu_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cgbmv_debug_longdouble_SOURCES=../common/Cgbmv.debug.cpp $(debug_srcdepends)
Cgbmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cgbmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cgbmv_debug_longdouble_ref_SOURCES=../common/Cgbmv.debug.cpp $(debug_srcdepends)
Cgbmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cgbmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cgemm_debug_longdouble_SOURCES=../common/Cgemm.debug.cpp $(debug_srcdepends)
Cgemm_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cgemm_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cgemm_debug_longdouble_ref_SOURCES=../common/Cgemm.debug.cpp $(debug_srcdepends)
Cgemm_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cgemm_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cgemv_debug_longdouble_SOURCES=../common/Cgemv.debug.cpp $(debug_srcdepends)
Cgemv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cgemv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cgemv_debug_longdouble_ref_SOURCES=../common/Cgemv.debug.cpp $(debug_srcdepends)
Cgemv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cgemv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cgerc_debug_longdouble_SOURCES=../common/Cgerc.debug.cpp $(debug_srcdepends)
Cgerc_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cgerc_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cgerc_debug_longdouble_ref_SOURCES=../common/Cgerc.debug.cpp $(debug_srcdepends)
Cgerc_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cgerc_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cgeru_debug_longdouble_SOURCES=../common/Cgeru.debug.cpp $(debug_srcdepends)
Cgeru_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cgeru_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cgeru_debug_longdouble_ref_SOURCES=../common/Cgeru.debug.cpp $(debug_srcdepends)
Cgeru_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cgeru_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Chbmv_debug_longdouble_SOURCES=../common/Chbmv.debug.cpp $(debug_srcdepends)
Chbmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Chbmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Chbmv_debug_longdouble_ref_SOURCES=../common/Chbmv.debug.cpp $(debug_srcdepends)
Chbmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Chbmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Chemm_debug_longdouble_SOURCES=../common/Chemm.debug.cpp $(debug_srcdepends)
Chemm_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Chemm_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Chemm_debug_longdouble_ref_SOURCES=../common/Chemm.debug.cpp $(debug_srcdepends)
Chemm_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Chemm_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Chemv_debug_longdouble_SOURCES=../common/Chemv.debug.cpp $(debug_srcdepends)
Chemv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Chemv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Chemv_debug_longdouble_ref_SOURCES=../common/Chemv.debug.cpp $(debug_srcdepends)
Chemv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Chemv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cher_debug_longdouble_SOURCES=../common/Cher.debug.cpp $(debug_srcdepends)
Cher_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cher_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cher_debug_longdouble_ref_SOURCES=../common/Cher.debug.cpp $(debug_srcdepends)
Cher_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cher_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cher2_debug_longdouble_SOURCES=../common/Cher2.debug.cpp $(debug_srcdepends)
Cher2_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cher2_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cher2_debug_longdouble_ref_SOURCES=../common/Cher2.debug.cpp $(debug_srcdepends)
Cher2_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cher2_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cher2k_debug_longdouble_SOURCES=../common/Cher2k.debug.cpp $(debug_srcdepends)
Cher2k_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cher2k_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cher2k_debug_longdouble_ref_SOURCES=../common/Cher2k.debug.cpp $(debug_srcdepends)
Cher2k_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cher2k_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cherk_debug_longdouble_SOURCES=../common/Cherk.debug.cpp $(debug_srcdepends)
Cherk_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cherk_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cherk_debug_longdouble_ref_SOURCES=../common/Cherk.debug.cpp $(debug_srcdepends)
Cherk_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cherk_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Chpmv_debug_longdouble_SOURCES=../common/Chpmv.debug.cpp $(debug_srcdepends)
Chpmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Chpmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Chpmv_debug_longdouble_ref_SOURCES=../common/Chpmv.debug.cpp $(debug_srcdepends)
Chpmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Chpmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Chpr_debug_longdouble_SOURCES=../common/Chpr.debug.cpp $(debug_srcdepends)
Chpr_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Chpr_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Chpr_debug_longdouble_ref_SOURCES=../common/Chpr.debug.cpp $(debug_srcdepends)
Chpr_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Chpr_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Chpr2_debug_longdouble_SOURCES=../common/Chpr2.debug.cpp $(debug_srcdepends)
Chpr2_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Chpr2_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Chpr2_debug_longdouble_ref_SOURCES=../common/Chpr2.debug.cpp $(debug_srcdepends)
Chpr2_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Chpr2_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Crotg_debug_longdouble_SOURCES=../common/Crotg.debug.cpp $(debug_srcdepends)
Crotg_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Crotg_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Crotg_debug_longdouble_ref_SOURCES=../common/Crotg.debug.cpp $(debug_srcdepends)
Crotg_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Crotg_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cscal_debug_longdouble_SOURCES=../common/Cscal.debug.cpp $(debug_srcdepends)
Cscal_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cscal_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cscal_debug_longdouble_ref_SOURCES=../common/Cscal.debug.cpp $(debug_srcdepends)
Cscal_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cscal_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Cswap_debug_longdouble_SOURCES=../common/Cswap.debug.cpp $(debug_srcdepends)
Cswap_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Cswap_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Cswap_debug_longdouble_ref_SOURCES=../common/Cswap.debug.cpp $(debug_srcdepends)
Cswap_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Cswap_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Csymm_debug_longdouble_SOURCES=../common/Csymm.debug.cpp $(debug_srcdepends)
Csymm_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Csymm_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Csymm_debug_longdouble_ref_SOURCES=../common/Csymm.debug.cpp $(debug_srcdepends)
Csymm_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Csymm_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Csyr2k_debug_longdouble_SOURCES=../common/Csyr2k.debug.cpp $(debug_srcdepends)
Csyr2k_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Csyr2k_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Csyr2k_debug_longdouble_ref_SOURCES=../common/Csyr2k.debug.cpp $(debug_srcdepends)
Csyr2k_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Csyr2k_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Csyrk_debug_longdouble_SOURCES=../common/Csyrk.debug.cpp $(debug_srcdepends)
Csyrk_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Csyrk_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Csyrk_debug_longdouble_ref_SOURCES=../common/Csyrk.debug.cpp $(debug_srcdepends)
Csyrk_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Csyrk_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Ctbmv_debug_longdouble_SOURCES=../common/Ctbmv.debug.cpp $(debug_srcdepends)
Ctbmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Ctbmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Ctbmv_debug_longdouble_ref_SOURCES=../common/Ctbmv.debug.cpp $(debug_srcdepends)
Ctbmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Ctbmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Ctbsv_debug_longdouble_SOURCES=../common/Ctbsv.debug.cpp $(debug_srcdepends)
Ctbsv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Ctbsv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Ctbsv_debug_longdouble_ref_SOURCES=../common/Ctbsv.debug.cpp $(debug_srcdepends)
Ctbsv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Ctbsv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Ctpmv_debug_longdouble_SOURCES=../common/Ctpmv.debug.cpp $(debug_srcdepends)
Ctpmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Ctpmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Ctpmv_debug_longdouble_ref_SOURCES=../common/Ctpmv.debug.cpp $(debug_srcdepends)
Ctpmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Ctpmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Ctpsv_debug_longdouble_SOURCES=../common/Ctpsv.debug.cpp $(debug_srcdepends)
Ctpsv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Ctpsv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Ctpsv_debug_longdouble_ref_SOURCES=../common/Ctpsv.debug.cpp $(debug_srcdepends)
Ctpsv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Ctpsv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Ctrmm_debug_longdouble_SOURCES=../common/Ctrmm.debug.cpp $(debug_srcdepends)
Ctrmm_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Ctrmm_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Ctrmm_debug_longdouble_ref_SOURCES=../common/Ctrmm.debug.cpp $(debug_srcdepends)
Ctrmm_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Ctrmm_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Ctrmv_debug_longdouble_SOURCES=../common/Ctrmv.debug.cpp $(debug_srcdepends)
Ctrmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Ctrmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Ctrmv_debug_longdouble_ref_SOURCES=../common/Ctrmv.debug.cpp $(debug_srcdepends)
Ctrmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Ctrmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Ctrsm_debug_longdouble_SOURCES=../common/Ctrsm.debug.cpp $(debug_srcdepends)
Ctrsm_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Ctrsm_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Ctrsm_debug_longdouble_ref_SOURCES=../common/Ctrsm.debug.cpp $(debug_srcdepends)
Ctrsm_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Ctrsm_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Ctrsv_debug_longdouble_SOURCES=../common/Ctrsv.debug.cpp $(debug_srcdepends)
Ctrsv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Ctrsv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Ctrsv_debug_longdouble_ref_SOURCES=../common/Ctrsv.debug.cpp $(debug_srcdepends)
Ctrsv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Ctrsv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

RCabs1_debug_longdouble_ref_SOURCES=../common/RCabs1.debug.cpp $(debug_srcdepends)
RCabs1_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
RCabs1_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

RCabs1_debug_longdouble_SOURCES=../common/RCabs1.debug.cpp $(debug_srcdepends)
RCabs1_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
RCabs1_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

RCasum_debug_longdouble_ref_SOURCES=../common/RCasum.debug.cpp $(debug_srcdepends)
RCasum_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
RCasum_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

RCasum_debug_longdouble_SOURCES=../common/RCasum.debug.cpp $(debug_srcdepends)
RCasum_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
RCasum_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

RCnrm2_debug_longdouble_ref_SOURCES=../common/RCnrm2.debug.cpp $(debug_srcdepends)
RCnrm2_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
RCnrm2_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

RCnrm2_debug_longdouble_SOURCES=../common/RCnrm2.debug.cpp $(debug_srcdepends)
RCnrm2_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
RCnrm2_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rasum_debug_longdouble_ref_SOURCES=../common/Rasum.debug.cpp $(debug_srcdepends)
Rasum_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rasum_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rasum_debug_longdouble_SOURCES=../common/Rasum.debug.cpp $(debug_srcdepends)
Rasum_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rasum_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Raxpy_debug_longdouble_ref_SOURCES=../common/Raxpy.debug.cpp $(debug_srcdepends)
Raxpy_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Raxpy_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Raxpy_debug_longdouble_SOURCES=../common/Raxpy.debug.cpp $(debug_srcdepends)
Raxpy_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Raxpy_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rcopy_debug_longdouble_ref_SOURCES=../common/Rcopy.debug.cpp $(debug_srcdepends)
Rcopy_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rcopy_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rcopy_debug_longdouble_SOURCES=../common/Rcopy.debug.cpp $(debug_srcdepends)
Rcopy_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rcopy_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rdot_debug_longdouble_ref_SOURCES=../common/Rdot.debug.cpp $(debug_srcdepends)
Rdot_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rdot_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rdot_debug_longdouble_SOURCES=../common/Rdot.debug.cpp $(debug_srcdepends)
Rdot_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rdot_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rgbmv_debug_longdouble_ref_SOURCES=../common/Rgbmv.debug.cpp $(debug_srcdepends)
Rgbmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rgbmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rgbmv_debug_longdouble_SOURCES=../common/Rgbmv.debug.cpp $(debug_srcdepends)
Rgbmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rgbmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rgemm_debug_longdouble_ref_SOURCES=../common/Rgemm.debug.cpp $(debug_srcdepends)
Rgemm_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rgemm_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rgemm_debug_longdouble_SOURCES=../common/Rgemm.debug.cpp $(debug_srcdepends)
Rgemm_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rgemm_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rgemv_debug_longdouble_ref_SOURCES=../common/Rgemv.debug.cpp $(debug_srcdepends)
Rgemv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rgemv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rgemv_debug_longdouble_SOURCES=../common/Rgemv.debug.cpp $(debug_srcdepends)
Rgemv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rgemv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rger_debug_longdouble_ref_SOURCES=../common/Rger.debug.cpp $(debug_srcdepends)
Rger_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rger_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rger_debug_longdouble_SOURCES=../common/Rger.debug.cpp $(debug_srcdepends)
Rger_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rger_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rnrm2_debug_longdouble_ref_SOURCES=../common/Rnrm2.debug.cpp $(debug_srcdepends)
Rnrm2_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rnrm2_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rnrm2_debug_longdouble_SOURCES=../common/Rnrm2.debug.cpp $(debug_srcdepends)
Rnrm2_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rnrm2_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rrot_debug_longdouble_ref_SOURCES=../common/Rrot.debug.cpp $(debug_srcdepends)
Rrot_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rrot_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rrot_debug_longdouble_SOURCES=../common/Rrot.debug.cpp $(debug_srcdepends)
Rrot_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rrot_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rrotg_debug_longdouble_ref_SOURCES=../common/Rrotg.debug.cpp $(debug_srcdepends)
Rrotg_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rrotg_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rrotg_debug_longdouble_SOURCES=../common/Rrotg.debug.cpp $(debug_srcdepends)
Rrotg_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rrotg_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rrotm_debug_longdouble_ref_SOURCES=../common/Rrotm.debug.cpp $(debug_srcdepends)
Rrotm_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rrotm_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rrotm_debug_longdouble_SOURCES=../common/Rrotm.debug.cpp $(debug_srcdepends)
Rrotm_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rrotm_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rsbmv_debug_longdouble_ref_SOURCES=../common/Rsbmv.debug.cpp $(debug_srcdepends)
Rsbmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rsbmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rsbmv_debug_longdouble_SOURCES=../common/Rsbmv.debug.cpp $(debug_srcdepends)
Rsbmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rsbmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rscal_debug_longdouble_ref_SOURCES=../common/Rscal.debug.cpp $(debug_srcdepends)
Rscal_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rscal_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rscal_debug_longdouble_SOURCES=../common/Rscal.debug.cpp $(debug_srcdepends)
Rscal_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rscal_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rspmv_debug_longdouble_ref_SOURCES=../common/Rspmv.debug.cpp $(debug_srcdepends)
Rspmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rspmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rspmv_debug_longdouble_SOURCES=../common/Rspmv.debug.cpp $(debug_srcdepends)
Rspmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rspmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rspr_debug_longdouble_ref_SOURCES=../common/Rspr.debug.cpp $(debug_srcdepends)
Rspr_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rspr_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rspr_debug_longdouble_SOURCES=../common/Rspr.debug.cpp $(debug_srcdepends)
Rspr_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rspr_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rspr2_debug_longdouble_ref_SOURCES=../common/Rspr2.debug.cpp $(debug_srcdepends)
Rspr2_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rspr2_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rspr2_debug_longdouble_SOURCES=../common/Rspr2.debug.cpp $(debug_srcdepends)
Rspr2_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rspr2_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rswap_debug_longdouble_ref_SOURCES=../common/Rswap.debug.cpp $(debug_srcdepends)
Rswap_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rswap_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rswap_debug_longdouble_SOURCES=../common/Rswap.debug.cpp $(debug_srcdepends)
Rswap_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rswap_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rsymm_debug_longdouble_ref_SOURCES=../common/Rsymm.debug.cpp $(debug_srcdepends)
Rsymm_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rsymm_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rsymm_debug_longdouble_SOURCES=../common/Rsymm.debug.cpp $(debug_srcdepends)
Rsymm_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rsymm_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rsymv_debug_longdouble_ref_SOURCES=../common/Rsymv.debug.cpp $(debug_srcdepends)
Rsymv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rsymv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rsymv_debug_longdouble_SOURCES=../common/Rsymv.debug.cpp $(debug_srcdepends)
Rsymv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rsymv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rsyr_debug_longdouble_ref_SOURCES=../common/Rsyr.debug.cpp $(debug_srcdepends)
Rsyr_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rsyr_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rsyr_debug_longdouble_SOURCES=../common/Rsyr.debug.cpp $(debug_srcdepends)
Rsyr_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rsyr_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rsyr2_debug_longdouble_ref_SOURCES=../common/Rsyr2.debug.cpp $(debug_srcdepends)
Rsyr2_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rsyr2_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rsyr2_debug_longdouble_SOURCES=../common/Rsyr2.debug.cpp $(debug_srcdepends)
Rsyr2_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rsyr2_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rsyr2k_debug_longdouble_ref_SOURCES=../common/Rsyr2k.debug.cpp $(debug_srcdepends)
Rsyr2k_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rsyr2k_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rsyr2k_debug_longdouble_SOURCES=../common/Rsyr2k.debug.cpp $(debug_srcdepends)
Rsyr2k_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rsyr2k_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rsyrk_debug_longdouble_ref_SOURCES=../common/Rsyrk.debug.cpp $(debug_srcdepends)
Rsyrk_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rsyrk_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rsyrk_debug_longdouble_SOURCES=../common/Rsyrk.debug.cpp $(debug_srcdepends)
Rsyrk_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rsyrk_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rtbmv_debug_longdouble_ref_SOURCES=../common/Rtbmv.debug.cpp $(debug_srcdepends)
Rtbmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rtbmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rtbmv_debug_longdouble_SOURCES=../common/Rtbmv.debug.cpp $(debug_srcdepends)
Rtbmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rtbmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rtbsv_debug_longdouble_ref_SOURCES=../common/Rtbsv.debug.cpp $(debug_srcdepends)
Rtbsv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rtbsv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rtbsv_debug_longdouble_SOURCES=../common/Rtbsv.debug.cpp $(debug_srcdepends)
Rtbsv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rtbsv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rtpmv_debug_longdouble_ref_SOURCES=../common/Rtpmv.debug.cpp $(debug_srcdepends)
Rtpmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rtpmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rtpmv_debug_longdouble_SOURCES=../common/Rtpmv.debug.cpp $(debug_srcdepends)
Rtpmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rtpmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rtpsv_debug_longdouble_ref_SOURCES=../common/Rtpsv.debug.cpp $(debug_srcdepends)
Rtpsv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rtpsv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rtpsv_debug_longdouble_SOURCES=../common/Rtpsv.debug.cpp $(debug_srcdepends)
Rtpsv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rtpsv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rtrmm_debug_longdouble_ref_SOURCES=../common/Rtrmm.debug.cpp $(debug_srcdepends)
Rtrmm_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rtrmm_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rtrmm_debug_longdouble_SOURCES=../common/Rtrmm.debug.cpp $(debug_srcdepends)
Rtrmm_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rtrmm_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rtrmv_debug_longdouble_ref_SOURCES=../common/Rtrmv.debug.cpp $(debug_srcdepends)
Rtrmv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rtrmv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rtrmv_debug_longdouble_SOURCES=../common/Rtrmv.debug.cpp $(debug_srcdepends)
Rtrmv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rtrmv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rtrsm_debug_longdouble_ref_SOURCES=../common/Rtrsm.debug.cpp $(debug_srcdepends)
Rtrsm_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rtrsm_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rtrsm_debug_longdouble_SOURCES=../common/Rtrsm.debug.cpp $(debug_srcdepends)
Rtrsm_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rtrsm_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)

Rtrsv_debug_longdouble_ref_SOURCES=../common/Rtrsv.debug.cpp $(debug_srcdepends)
Rtrsv_debug_longdouble_ref_CXXFLAGS=$(debug_cxxflags)
Rtrsv_debug_longdouble_ref_LDFLAGS=$(ref_libdepends) $(mplibs) $(refblas)

Rtrsv_debug_longdouble_SOURCES=../common/Rtrsv.debug.cpp $(debug_srcdepends)
Rtrsv_debug_longdouble_CXXFLAGS=$(debug_cxxflags)
Rtrsv_debug_longdouble_LDFLAGS=$(opt_libdepends) $(mplibs) $(refblas)
